<!DOCTYPE resources [<!ENTITY appname "Quadcopter Remote"><!ENTITY author "LYG">]>
<resources>
    <!-- StartPage -->
    <string name="app_name">&appname;</string>
    <string name="welcome">Welcome to &appname;!</string>
    <string name="start">Start</string>
    <string name="content_start_pic">Drone drawing</string>

    <!-- Loading -->
    <string name="cancel">Cancel</string>
    <string name="splash_info">Connecting to RPi...</string>

    <!-- Toolbar -->
    <string name="settings">Settings</string>
    <string name="disconnect">Disconnect</string>

    <!-- Cockpit -->
    <string name="ThrottleText">Throttle:</string>
    <string name="PercentageText">%</string>

    <!-- Prefs -->
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="connection_header">Connection</string>
    <string name="socket_header">Socket</string>

    <!-- Connection Type Preference Entries -->
    <string name="connection_title">Connect to Drone via</string>
    <string name="hostname">Hostname</string>
    <string name="ip">IP Address</string>

    <!-- Hostname Preference -->
    <string name="hostname_title">Enter RPi Hostname</string>
    <string name="default_hostname">raspberrypi</string>

    <!-- IP Preference -->
    <string name="ip_title">Enter RPi IP</string>
    <string name="default_ip">127.0.0.1</string>

    <!-- Port Preference -->
    <string name="port_title">Enter RPi Port</string>
    <string name="default_port">8889</string>

    <!-- Byte Preference -->
    <string name="bytes_title">Bytes read per message</string>
    <string name="default_bytes">1024</string>

    <!-- Delimiter Preference -->
    <string name="delimiter_title">Message delimiter</string>
    <string name="default_delimiter">\\r\\n</string>
</resources>