<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/connection_header">

        <ListPreference
            android:defaultValue="1"
            android:entries="@array/connection_type"
            android:entryValues="@array/connection_values"
            android:key="connection_type"
            android:title="@string/connection_title"
            app:useSimpleSummaryProvider="true" />

        <EditTextPreference
            android:defaultValue="@string/default_port"
            android:key="port"
            android:selectAllOnFocus="true"
            android:inputType="number"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true"
            android:title="@string/port_title" />

        <EditTextPreference
            android:defaultValue="@string/default_hostname"
            android:key="hostname"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            app:useSimpleSummaryProvider="true"
            android:title="@string/hostname_title" />

        <EditTextPreference
            android:defaultValue="@string/default_ip"
            android:key="ip"
            android:selectAllOnFocus="true"
            android:singleLine="true"
            android:inputType="number"
            android:digits="0123456789."
            app:useSimpleSummaryProvider="true"
            android:title="@string/ip_title" />

    </PreferenceCategory>

</PreferenceScreen>